added Create New Page feature; created Coffee and Tea entries to test it; start to add edit entry function

--- a/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -21,10 +21,10 @@
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
-                    <a href="">Create New Page</a>
+                    <a href="{% url 'new_page' %}">Create New Page</a>
                 </div>
                 <div>
-                    <a href="">Random Page</a>
+                    Random Page
                 </div>
                 {% block nav %}
                 {% endblock %}
