created 'Edit' button on each entry's page

--- a/wiki/encyclopedia/templates/encyclopedia/entry.html
+++ b/wiki/encyclopedia/templates/encyclopedia/entry.html
@@ -6,6 +6,9 @@
 
 {% block body %}
     {{ md_content | safe }}
-    <br>
-    <a href="">Edit Page</a>
+    <form action="{% url 'edit_page' %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="entry_title">
+        <input type="submit" value="Edit" class="btn btn-danger">
+    </form>
 {% endblock %}
