--- a/wiki/encyclopedia/templates/encyclopedia/entry.html
+++ b/wiki/encyclopedia/templates/encyclopedia/entry.html
@@ -8,7 +8,7 @@
     {{ md_content | safe }}
     <form action="{% url 'edit_page' %}" method="POST">
         {% csrf_token %}
-        <input type="hidden" name="entry_title">
+        <input type="hidden" name="title_" value="{{ title_name }}">
         <input type="submit" value="Edit" class="btn btn-danger">
     </form>
 {% endblock %}
