'search' view works correctly

--- a/wiki/encyclopedia/templates/encyclopedia/edit.html
+++ b/wiki/encyclopedia/templates/encyclopedia/edit.html
@@ -12,6 +12,6 @@
         <br/>
         <textarea name="edit_content">{{ md_content }}</textarea>
         <br/>
-        <input type="submit" value="Edit" class="btn btn-danger">
+        <input type="submit" value="Save" class="btn btn-danger">
     </form>
 {% endblock %}
