--- a/wiki/encyclopedia/templates/encyclopedia/search_error.html
+++ b/wiki/encyclopedia/templates/encyclopedia/search_error.html
@@ -6,6 +6,7 @@
 
 {% block body %}
     <h1>Search Error</h1>
-    Can't find defined page "{{ page }}"
+    <br>
+    <h2>The Page "{{ page }}" Was Not Found...</h2>
 
 {% endblock %}
